--- a/PortalConexao/Content/MyStyle.css
+++ b/PortalConexao/Content/MyStyle.css
@@ -1,5 +1,29 @@
 ﻿.espacos {
     margin: 20px;
     margin-left: 50px;
-    border: solid 1px rgba(3, 168, 124, 0.3);
+    border: solid 1px;
+}
+
+.article-title {
+    font-size: 4rem;
+    line-height: 1.2;
+    font-weight: 600;
+    color: rgba(0,0,0,0.9);
+    padding: 16px 0;
+}
+
+.article-body {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
+.content-head {
+    width: 55.5rem;
+    padding: 0;
+    margin-top: 64px;
 }
