--- a/PortalConexao/Views/Home/Index.cshtml
+++ b/PortalConexao/Views/Home/Index.cshtml
@@ -15,12 +15,14 @@ else
     <div class="row">
         @foreach (var item in Model.Noticias)
         {
-            <div class="card espacos shadow-lg p-3 mb-5 bg-white rounded" style="width: 18rem; margin-top: 50px" >
-                <img class="card-img-top" src="@item.Imagem" alt="Imagens Noticias">
-                <div class="card-body">
-                    <h5 class="card-title">@item.Titulo</h5>
-                    <p class="card-text">@item.SubTitulo</p>
-                </div>
+            <div class="card espacos p-3 mb-5 bg-white rounded" style="width: 18rem; margin-top: 50px" >
+                <a href="/Home/NoticiaDetalhe/@item.Id">
+                    <img class="card-img-top" src="@item.Imagem" alt="Imagens Noticias">
+                    <div class="card-body">
+                        <h5 class="card-title">@item.Titulo </h5>
+                        <p class="card-text">@item.SubTitulo</p>
+                    </div>
+                </a>
             </div>
         }
     </div>
