--- a/PortalConexao/Content/MyStyle.css
+++ b/PortalConexao/Content/MyStyle.css
@@ -5,15 +5,19 @@
 }
 
 .article-title {
-    font-size: 4rem;
+    font-size: 1.55rem;
     line-height: 1.2;
     font-weight: 600;
     color: rgba(0,0,0,0.9);
     padding: 16px 0;
+    margin-top: 10px;
+    margin-left: 20px;
 }
 
 .article-body {
-    margin: 0;
+    font-size: 4rem;
+    margin-top: 30px;
+    line-height: 1.75rem;
     padding: 0;
     border: 0;
     outline: 0;
