--- a/PortalConexao/Views/Home/Index.cshtml
+++ b/PortalConexao/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 }
 else
 {
-    <div class="row">
+    <div class="row container-fluid">
         @foreach (var item in Model.Noticias)
         {
             <div class="card espacos p-3 mb-5 bg-white rounded" style="width: 18rem; margin-top: 50px" >
