--- a/PortalConexao/Views/Home/NoticiaDetalhe.cshtml
+++ b/PortalConexao/Views/Home/NoticiaDetalhe.cshtml
@@ -15,7 +15,7 @@
 
 else
 {
-    <div class="row container-fluid" style = "margin-left: 2px">
+    <div class="row container-fluid" style = "margin-left: 2px; margin-top: 60px">
         
         @foreach (var item in Model.Noticias)
         {
