--- a/PortalConexao/Views/Categoria/Saude.cshtml
+++ b/PortalConexao/Views/Categoria/Saude.cshtml
@@ -1,7 +1,33 @@
-﻿
-@{
-    ViewBag.Title = "Saude";
+﻿@{
+    ViewBag.Title = "Conexão Oeste";
 }
 
-<h2>Saude</h2>
+@model PortalConexao.Models.HomeIndexViewModel
 
+@if (Model.Noticias.Length == 0)
+{
+    <div class="row">
+        <span> Não há noticias para serem exibidas</span>
+    </div>
+}
+else
+{
+    <div class="row container-fluid" style="margin-top: 60px">
+
+        @foreach (var item in Model.Noticias)
+        {
+
+            <div class="card espacos" style="width: 18rem;">
+
+                <a href="/Home/NoticiaDetalhe/@item.Id">
+                    <img src="@item.Imagem" class="card-img-top" alt="Imagens Noticias">
+                    <div class="card-body">
+                        <h5 class="card-title title-card">@item.Titulo</h5>
+                        <p class="card-text body-card">@item.SubTitulo</p>
+                    </div>
+                </a>
+            </div>
+
+        }
+    </div>
+}
