--- a/PortalConexao/Views/Shared/_Layout.cshtml
+++ b/PortalConexao/Views/Shared/_Layout.cshtml
@@ -15,48 +15,68 @@
     @RenderSection("scripts", required: false)
 
 </head>
+
+@model PortalConexao.Models.HomeIndexViewModel
+
 <body>
+    <div class="espacos" style="margin-top: 0px">
+        <img src="\imagens\logo.jpg" alt="Imagem logo">
+    </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light "  style="background-color: #fb8c00">
-       
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse"  id="navbarNavDropdown" style="background-color:#fb8c00">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Política</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Saúde</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#">Esportes</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                       Cidades
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+    <nav class="navbar navbar-expand-lg navbar-light font-menu" style="background-color: #fb8c00">
 
-                        @foreach (var item in ViewBag.Cidades)
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown" style="background-color:#fb8c00">
+        <ul class="navbar-nav">
+            
+            <li class="nav-item active">
+                <a class="nav-link font-li" href="/Home/Index">Home<span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item active">
+                <a class="nav-link font-li" href="/Categoria/Politica/1">Politica<span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item active">
+                <a class="nav-link font-li" href="/Categoria/Esportes/2">Esportes<span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item active">
+                <a class="nav-link font-li" href="/Categoria/InfraEstrutura/3">Infra-Estrutura <span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item active">
+                <a class="nav-link font-li" href="/Categoria/Entretenimento/4">Entretenimento</a>
+            </li>
+
+            <li class="nav-item active">
+                <a class="nav-link font-li" href="/Categoria/Saude/5">Saúde</a>
+            </li>
+
+            <li class="nav-item active dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Cidades
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+
+                    @foreach (var item in ViewBag.Cidades)
+                    {
+                        if (item.Id == ViewBag.CidadeSelecionada)
                         {
-                            if (item.Id == ViewBag.CidadeSelecionada)
-                            {
-                                <a class="dropdown-item" href="/Home/Index/?@item.Id">@item.Nome</a>
-                            }
-                            else
-                            {
-                                <a class="dropdown-item" href="/Home/Index/@item.Id">@item.Nome</a>
-                            }
+                            <a class="dropdown-item" href="/Home/Index/?@item.Id">@item.Nome</a>
                         }
-                    </div>
-                </li>
-            </ul>
-        </div>
+                        else
+                        {
+                            <a class="dropdown-item" href="/Home/Index/@item.Id">@item.Nome</a>
+                        }
+                    }
+                </div>
+            </li>
+        </ul>
+    </div>
     </nav>
 
 
