--- a/PortalConexao/Views/Home/NoticiaDetalhe.cshtml
+++ b/PortalConexao/Views/Home/NoticiaDetalhe.cshtml
@@ -15,17 +15,25 @@
 
 else
 {
-    <div class="row container-fluid" style="margin-left: 2px; margin-top: 60px">
+   
+    <div class="row container-fluide">
 
         @foreach (var item in Model.Noticias)
         {
-            <h5 class="article-title container-fluid">@item.Titulo </h5>
-            @*<img src="@item.Imagem" class=".img-fluid. max-width: 100%" alt="@item.DetalheImagem" />*@
-            <div class="row container-fluid" style="margin-left: 2px">
+            <div class="article-title container-fluid">
+                <h1>@item.Titulo </h1>
+            </div>
 
+            <div class="subtitle">
+                <h2>@item.SubTitulo</h2>
+            </div>
+
+            <div class="row container-fluid" style="margin-left: 2px">
                 <p class="article-body">@item.Conteudo</p>
             </div>
+           
         }
+   
 
     </div>
 }
