--- a/PortalConexao/Content/MyStyle.css
+++ b/PortalConexao/Content/MyStyle.css
@@ -33,7 +33,15 @@ a:link
     margin-top: 500px;
     margin-left: 00px; 
     margin-top: 60px;
-    
+}
+
+.div-text{
+    /*background-color: mediumvioletred;*/
+    width: 50%;
+    margin-top: 50px;   
+    margin-bottom:50px;
+    margin-left: 200px;
+
 }
 .article-title {
     font-size: 3.0rem;
@@ -41,9 +49,9 @@ a:link
     color: rgba(0,0,0,0.9);
     padding: 16px;
     margin-top: 20px;
-    background-color: pink;
-    margin-left: 180px;
-   width: 60%;
+    /*background-color: pink;*/
+    margin-left: 190px;
+    width: 60%;
 }
 
 .subtitle {
@@ -54,7 +62,7 @@ a:link
     text-align: left;
     margin-top: 1px;
     margin-left: 200px;
-    background-color: purple;
+    /*background-color: purple;*/
 }
 
 .article-body {
@@ -64,7 +72,7 @@ a:link
     margin-top: 30px;
     line-height: 1.75rem;
     font-size: 100%;
-    background-color : lawngreen;
+    /*background-color : lawngreen;*/
 }
 
 .content-head {
@@ -73,19 +81,76 @@ a:link
     margin-top: 64px;
 }
 
-/*@media screen and (max-width: 600px){
-    body{
-         background-color: olive;
-        color: white;
+@media screen and (max-width: 770px){
+    .article-title {
+        width: 95%;
+        font-size: 2rem;
+        margin-left: 35px;
+        margin-top: 30px;
+        line-height: 1.75rem;
+        font-size: 100%;
     }
-}*/
-@media screen and (max-width: 420px){
+    .subtitle {
+        width: 90%;
+        color: #555;
+        font-size: 1.25rem;
+        line-height: 1.75rem;
+        text-align: left;
+        margin-top: 1px;
+        margin-left: 50px;
+    }
+    .article-body {
+        margin-left: 70px;
+        width: 80%;
+    }
+    .div-text{
+        width: 80%;
+        margin-left: 70px;
+    }
+}
+
+@media screen and (min-width: 731px) and (max-width: 750px){
+    .article-body{
+        margin-left: 20px;
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 560px) and (max-width: 640px){
+    .article-body{
+        width:100%;
+        margin-left: 20px;
+    }
+}
+@media screen and (max-width: 440px){
     .article-body{
         margin-left: 0px;
         width: 450px;
     }
     .espacos{
         margin-left: 80px;
+    }
+    .article-title {
+        width: 95%;
+        font-size: 2rem;
+        margin-left: 18px;
+        margin-top: 30px;
+        line-height: 1.75rem;
+        font-size: 100%;
+        /*background-color: lawngreen;*/
+    }
+    .subtitle {
+        width: 90%;
+        color: #555;
+        font-size: 1.25rem;
+        line-height: 1.75rem;
+        text-align: left;
+        margin-top: 1px;
+        margin-left: 20px;
+        /*background-color: purple;*/
+    }
+    .div-text {
+        margin-left: 40px;
     }
     
 }
@@ -95,12 +160,18 @@ a:link
     margin-left: 0px;
     width: 450px;
     }
+   .div-text{
+       margin-left: 10px;
+   }
 }
 
 
-@media screen and (max-width: 375px){
+@media screen and (max-width: 376px){
     .espacos {
         margin-left: 50px;
+    }
+    .div-text{
+        margin-left: 40px;
     }
 }
 
@@ -109,4 +180,9 @@ a:link
     .espacos {
         margin-left: 35px;
     }
+    .div-text{
+        margin-left: 30px;
+        margin-bottom: 20px;
+    }
+ 
 }
