--- a/PortalConexao/Views/Home/NoticiaDetalhe.cshtml
+++ b/PortalConexao/Views/Home/NoticiaDetalhe.cshtml
@@ -30,10 +30,11 @@ else
 
             <div class="container-fluid div-text">
                 <img class="img-fluid" src="@item.Imagem" alt="Alternate Text" />
+                <p style="font-size: 0.8rem;">@item.DetalheImagem </p>
             </div>
 
             <div class="row container-fluid" style="margin-left: 2px">
-                <p class="article-body">@item.Conteudo</p>
+                <p class="article-body" style="font-weight: 600">@item.Conteudo</p>
             </div>
            
         }
