--- a/PortalConexao/Views/Shared/_Layout.cshtml
+++ b/PortalConexao/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Jornal Conexão Oeste</title>
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -20,63 +20,68 @@
 
 <body>
     <div class="espacos" style="margin-top: 0px">
+        <div class="carousel-inner img-fluid banner_top">
+            <div class="carousel-item active ">
+                <a href="https://www.osasco.sp.leg.br/"><img src="\imagens\camara.jpeg" class="d-block w-100" alt="..."></a>
+            </div>
+        </div>
         <img src="\imagens\logo.jpg" alt="Imagem logo">
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-light font-menu" style="background-color: #fb8c00">
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarNavDropdown" style="background-color:#fb8c00">
-        <ul class="navbar-nav">
-            
-            <li class="nav-item active">
-                <a class="nav-link font-li" href="/Home/Index">Home<span class="sr-only">(current)</span></a>
-            </li>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown" style="background-color:#fb8c00">
+            <ul class="navbar-nav">
 
-            <li class="nav-item active">
-                <a class="nav-link font-li" href="/Categoria/Politica/1">Politica<span class="sr-only">(current)</span></a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link font-li" href="/Home/Index">Home<span class="sr-only">(current)</span></a>
+                </li>
 
-            <li class="nav-item active">
-                <a class="nav-link font-li" href="/Categoria/Esportes/2">Esportes<span class="sr-only">(current)</span></a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link font-li" href="/Categoria/Politica/1">Politica<span class="sr-only">(current)</span></a>
+                </li>
 
-            <li class="nav-item active">
-                <a class="nav-link font-li" href="/Categoria/InfraEstrutura/3">Infra-Estrutura <span class="sr-only">(current)</span></a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link font-li" href="/Categoria/Esportes/2">Esportes<span class="sr-only">(current)</span></a>
+                </li>
 
-            <li class="nav-item active">
-                <a class="nav-link font-li" href="/Categoria/Entretenimento/4">Entretenimento</a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link font-li" href="/Categoria/InfraEstrutura/3">Infra-Estrutura <span class="sr-only">(current)</span></a>
+                </li>
 
-            <li class="nav-item active">
-                <a class="nav-link font-li" href="/Categoria/Saude/5">Saúde</a>
-            </li>
+                <li class="nav-item active">
+                    <a class="nav-link font-li" href="/Categoria/Entretenimento/4">Entretenimento</a>
+                </li>
 
-            <li class="nav-item active dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Cidades
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li class="nav-item active">
+                    <a class="nav-link font-li" href="/Categoria/Saude/5">Saúde</a>
+                </li>
 
-                    @foreach (var item in ViewBag.Cidades)
-                    {
-                        if (item.Id == ViewBag.CidadeSelecionada)
+                <li class="nav-item active dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Cidades
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+
+                        @foreach (var item in ViewBag.Cidades)
                         {
-                            <a class="dropdown-item" href="/Home/Index/?@item.Id">@item.Nome</a>
+                            if (item.Id == ViewBag.CidadeSelecionada)
+                            {
+                                <a class="dropdown-item" href="/Home/Index/?@item.Id">@item.Nome</a>
+                            }
+                            else
+                            {
+                                <a class="dropdown-item" href="/Home/Index/@item.Id">@item.Nome</a>
+                            }
                         }
-                        else
-                        {
-                            <a class="dropdown-item" href="/Home/Index/@item.Id">@item.Nome</a>
-                        }
-                    }
-                </div>
-            </li>
-        </ul>
-    </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </nav>
 
 
@@ -84,7 +89,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Jornal Conexão Oeste - Todos os Direitos Reservados </p>
         </footer>
     </div>
 
