--- a/PortalConexao/Views/Home/Index.cshtml
+++ b/PortalConexao/Views/Home/Index.cshtml
@@ -14,9 +14,52 @@ else
 {
     <div class="row container-fluid" style="margin-top: 60px">
 
+        <div class="bd-example" style="margin-left: 10px">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="\imagens\carapicuiba.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Primeiro sladi</h5>
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                        </div>
+                    </div>
+                    @foreach (var ca in Model.Carousels)
+                    {
+
+                        <div class="carousel-item">
+                            <a href="/Home/DetalheCarousel/@ca.CarouselId">
+                            <img src="@ca.Imagem" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>@ca.Titulo</h5>
+                                <p>@ca.SubTitulo</p>
+                            </div>
+                            </a>
+                        </div>
+
+                    }
+
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
+
 
         @foreach (var item in Model.Noticias)
-        { 
+        {
             <div class="card espacos" style="width: 18rem;">
 
                 <a href="/Home/NoticiaDetalhe/@item.Id">
