--- a/PortalConexao/Views/Home/Index.cshtml
+++ b/PortalConexao/Views/Home/Index.cshtml
@@ -21,24 +21,25 @@ else
                     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                     <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
                 </ol>
-                <div class="carousel-inner">
+                <div class="carousel-inner img-fluid">
                     <div class="carousel-item active">
-                        <img src="\imagens\carapicuiba.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Primeiro sladi</h5>
-                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
+                        <a href="/Home\DetalheCarousel\4">
+                            <img src="\imagens\cat.jpg" class="d-block w-100 img-fluid size-carousel">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="font-card">Barueri realiza feira especial de adoção responsável dia 30</h5>
+                            </div>
+                            </a>
                     </div>
                     @foreach (var ca in Model.Carousels)
                     {
 
-                        <div class="carousel-item">
+                        <div class="carousel-item img-fluid">
                             <a href="/Home/DetalheCarousel/@ca.CarouselId">
-                            <img src="@ca.Imagem" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>@ca.Titulo</h5>
-                                <p>@ca.SubTitulo</p>
-                            </div>
+                                <img src="@ca.Imagem" class="d-block w-100 img-fluid size-carousel " alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5 class="font-card">@ca.Titulo</h5>
+                                    <p class="font-card">@ca.SubTitulo</p>
+                                </div>
                             </a>
                         </div>
 
@@ -60,7 +61,7 @@ else
 
         @foreach (var item in Model.Noticias)
         {
-            <div class="card espacos" style="width: 18rem;">
+            <div class="card espacos" style="width: 18rem; margin-top: 50px">
 
                 <a href="/Home/NoticiaDetalhe/@item.Id">
                     <img src="@item.Imagem" class="card-img-top" alt="Imagens Noticias">
