Ajuste Layout, ordenação das notícias por ordem decrescente.

--- a/PortalConexao/Views/Shared/_Layout.cshtml
+++ b/PortalConexao/Views/Shared/_Layout.cshtml
@@ -92,6 +92,8 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Jornal Conexão Oeste - Todos os Direitos Reservados </p>
+
+ 	    <img class="img-fluid" src="\imagens\amecon.jpg"/> 
         </footer>
     </div>
 
