--- a/PortalConexao/Views/Home/Index.cshtml
+++ b/PortalConexao/Views/Home/Index.cshtml
@@ -22,26 +22,32 @@ else
                     <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner img-fluid">
-                    <div class="carousel-item active">
-                        <a href="/Home\DetalheCarousel\4">
-                            <img src="\imagens\cat.jpg" class="d-block w-100 img-fluid size-carousel">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="font-card">Barueri realiza feira especial de adoção responsável dia 30</h5>
-                            </div>
-                            </a>
-                    </div>
+
                     @foreach (var ca in Model.Carousels)
                     {
-
-                        <div class="carousel-item img-fluid">
-                            <a href="/Home/DetalheCarousel/@ca.CarouselId">
-                                <img src="@ca.Imagem" class="d-block w-100 img-fluid size-carousel " alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5 class="font-card">@ca.Titulo</h5>
-                                    <p class="font-card">@ca.SubTitulo</p>
-                                </div>
-                            </a>
-                        </div>
+                        if (ca.Ativo == 1)
+                        {
+                            <div class="carousel-item active">
+                                <a href="/Home/DetalheCarousel/@ca.CarouselId">
+                                    <img src="@ca.Imagem" class="d-block w-100 img-fluid size-carousel">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="font-card">@ca.Titulo</h5>
+                                    </div>
+                                </a>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="carousel-item img-fluid">
+                                <a href="/Home/DetalheCarousel/@ca.CarouselId">
+                                    <img src="@ca.Imagem" class="d-block w-100 img-fluid size-carousel " alt="...">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5 class="font-card">@ca.Titulo</h5>
+                                        <p class="font-card">@ca.SubTitulo</p>
+                                    </div>
+                                </a>
+                            </div>
+                        }
 
                     }
 
@@ -57,22 +63,72 @@ else
             </div>
         </div>
 
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4" style="margin-top: 50px; float: right">
+                <a class="nav-link" href="/Home/NoticiaDetalhe/29">
+                    <img class="img-fluid" src="\imagens\diretrizes.jpg" />
+                    <h6 class="noticia_autor" style="margin-top: 10px;">
+                        Câmara de Itapevi realiza audiência pública sobre Lei de Diretrizes Orçamentárias de 2020
+                    </h6>
+                </a>
+            </div>
+
+            <div class="col-md-4" style="margin-top: 50px; float: right">
+                <a class="nav-link" href="/Home/NoticiaDetalhe/26">
+                    <img class="img-fluid" src="\imagens\social.jpg" />
+                    <h6 class="noticia_autor" style="margin-top: 10px;">
+                        Carapicuíba oferece curso gratuito de Mídias Sociais
+                    </h6>
+                </a>
+            </div>
+
+            <div class="col-md-4" style="margin-top: 50px; float: right">
+                <a class="nav-link" href="/Home/NoticiaDetalhe/17">
+                    <img class="img-fluid" src="\imagens\DJI.jpg" />
+                    <h6 class="noticia_autor" style="margin-top: 10px;">
+                        Centro de Hemodiálise passa de 60 atendimentos para mais de 200 por dia
+                    </h6>
+                </a>
+            </div>
+
+        </div>
+
+
+        <div class="col-md-4" style="margin-top: 50px; float: right;">
+            <img class="img-fluid" src="\imagens\binho.jpg" />
+
+        </div>
 
 
         @foreach (var item in Model.Noticias)
         {
-            <div class="card espacos" style="width: 18rem; margin-top: 50px">
+            <div class="col-md-8" style="display: flex; margin-top: 50px;">
 
-                <a href="/Home/NoticiaDetalhe/@item.Id">
-                    <img src="@item.Imagem" class="card-img-top" alt="Imagens Noticias">
-                    <div class="card-body">
-                        <h5 class="card-title title-card">@item.Titulo</h5>
-                        <p style="font-size: 12px;">@item.DataPublicacao</p>
-                        <p class="card-text body-card">@item.SubTitulo</p>
-
-                    </div>
-                </a>
+                <div class=" mb-3">
+                    <a class="nav-link" href="/Home/NoticiaDetalhe/@item.Id">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="@item.Imagem" class="card-img" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title noticia_titulo">@item.Titulo</h5>
+                                    <p class="card-text noticia_resumo">@item.SubTitulo</p>
+                                    <p class="card-text"><small class="text-muted">@item.DataPublicacao</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
+
+
         }
+
+
+
     </div>
 }
